test/official_tests/field/set_on_function.lox
fun foo() {}

foo.bar = "value"; // error: {"line":3,"message":"Only class instances have properties","type":"RuntimeError"}
